# AlphaSeeker

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  main.py  pyproject.toml  test_supervisor.py  test_synthesis.py
.agent/rules/: rule.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
config/: models.yaml
docs/: equity_agent.md
docs/examples/: AAPL_analysis_report.md  aapl_equity_case_study.md  aapl_equity_one_pager.html  aapl_equity_one_pager.md
docs/examples/assets/: xom_investment_memo.md
scripts/: xom_patch_validation.py
src/: llm_manager.py  schemas.py
src/agent/: graph.py
src/agents/commodity/: graph.py  nodes.py  schemas.py
src/agents/equity/: graph.py  nodes.py  schemas.py
src/agents/macro/: graph.py  nodes.py  schemas.py
src/cli/: README.md  __init__.py  app.py  llm_hook.py  theme.py
src/cli/backends/: __init__.py  harness_backend.py
src/harness/: README.md  TASK.md  __init__.py  agent_worker.py  artifacts.py  benchmark.py  claims.py  commenter.py  contracts.py  controller.py  deep_research.py  executor.py  planner.py  presets.py  prompt_builder.py  registry.py  retrieval.py  runtime.py  selector.py  transport.py  types.py  verifier.py  worker.py  writer.py
src/shared/: llm_manager.py  model_config.py  node_contracts.py  reliability.py  report_filename.py  schemas.py  text_utils.py  web_search.py
src/supervisor/: graph.py  router.py  synthesizer.py  types.py
src/tools/: financials.py  peers.py  web_search.py
tests/: conftest.py
tests/component/: test_harness_deep_mode.py  test_harness_dossier_resume_parallel.py  test_harness_phase_flow.py  test_harness_runtime.py  test_main_runtime_switch.py  test_supervisor_component_flow.py
tests/live/: test_live_harness_smoke.py  test_live_supervisor_smoke.py  test_transport_rate_limit_retry.py
tests/unit/: test_cftc_tool.py  test_cli_dashboard.py  test_eia_tool.py  test_futures_tool.py  test_harness_commenter.py  test_harness_deep_research.py  test_harness_equity_skills.py  test_harness_executor_tools.py  test_harness_phase_artifacts_and_planner.py  test_harness_planner_and_benchmark.py  test_harness_selector_and_registry.py  test_harness_transport.py  test_harness_types_and_verifier.py  test_harness_writer_and_core_defaults.py  test_model_provider_requirements.py  test_node_contracts.py  test_reliability.py  test_supervisor_graph_contracts.py  test_supervisor_router.py
(+58 files in other folders)
