[project]
name = "alphaseeker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=1.0.0",
    "langchain>=1.2.9",
    "langgraph>=1.0.8",
    "langchain-google-genai>=2.1.0",
    "langchain-openai>=0.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pypdf>=3.0.0",
    "python-dotenv>=1.2.1",
    "tabulate>=0.9.0",
    "yfinance>=0.2.50",
    "trafilatura>=2.0.0",
    "google-generativeai>=0.8.6",
]
