[project]
name = "alphaseeker"
version = "0.1.0"
description = "Multi-agent quantitative research system for equity, macro, and commodity analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=1.0.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.9",
    "langchain-google-genai>=2.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=1.0.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.12.5",
    "pypdf>=3.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.50",
]
